Ignore Firebase JSON

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ testem.log
 .DS_Store
 Thumbs.db
 otwo-a14ed-firebase-adminsdk-fbsvc-d3bab4dcac.json
+otwo-a14ed-firebase-adminsdk-fbsvc-d3bab4dcac.json
