--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ testem.log
 Thumbs.db
 otwo-a14ed-firebase-adminsdk-fbsvc-d3bab4dcac.json
 otwo-a14ed-firebase-adminsdk-fbsvc-d3bab4dcac.json
+.env
